# phish-watch

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/controllers/: phish.py  user.py
app/models/: phish.py
app/schemas/: phish.py
app/tasks/: phish_tank.py  scraper.py
app/utils/: fetch_phish.py  links.py
app/views/: phish.py  user.py
src/: main.py
src/controllers/: __init__.py  phish.py  user.py
src/models/: phish.py  user.py
src/schemas/: phish.py
src/tasks/: celery_config.py  phish_tank.py
src/utils/: fetch_phish.py
src/views/: phish.py  user.py
