[tool.poetry]
name = "phish-watch"
version = "0.1.0"
description = ""
authors = ["Furkan Öneryıldız <furkan.oneryildiz@gmail.com>"]
readme = "README.md"
packages = [{include = "phish_watch"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "1.4.42"
databases = {extras = ["postgresql"], version = "^0.7.0"}
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
